--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,9 @@ header {
   list-style: none;
   padding: 10px;
   overflow-y: auto;
+
+  display: flex;
+  flex-direction: column;
 }
 
 #messages li {
@@ -81,6 +84,14 @@ form button {
 
 form button:hover {
   background-color: #357ac8;
+}
+
+.my-message{
+    align-self: flex-end;
+}
+
+.other-message{
+    align-self: flex-start;
 }
 
 @media (max-width: 600px) {
